--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.example.miditest"
         minSdkVersion 18
@@ -21,8 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile project(':MidiDriver-all-release')
+    implementation  fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    implementation  'com.android.support:appcompat-v7:23.1.1'
+    implementation 'com.github.billthefarmer:mididriver:v1.17'
+    implementation  project(':MidiDriver-all-release')
 }
